--- a/MomentoI/index.css
+++ b/MomentoI/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 .jumbotron {
-  background-image: url('/imagenes/Fondo.png');
+  background-image: url('imagenes/Fondo.png');
   background-size: 100%;
   background-position-y: bottom;
   color:white;
@@ -12,18 +12,21 @@ body {
 
 .card {
   text-align: center;
+  width: 17rem;
+  
 }
 
-.ulPHP,.ulJS,.ulPython{
+.ulPHP,.ulJS,.ulPython,.ulHTML{
   text-align:left;
   list-style-type: circle;
-  margin: 0;
-  padding:5%;
+  margin: 2%;
+  padding:2%;
   
 }
 
 .card-text {
   text-align: center;
+  margin-right: 10%;
   
 }
 
