--- a/MomentoII/public/styles/estilos.css
+++ b/MomentoII/public/styles/estilos.css
@@ -1,34 +1,39 @@
 .carousel-inner img {
-    width: inherit;
-    height: 380px;
-  }
+  width: inherit;
+  height: 380px;
+}
 
-  .carousel-caption h4 {
-    position: absolute;
-    bottom: 280px;
-    right: -150px;
-       
-  }
-
-  .carousel-caption p {
-    position: absolute;
-    bottom: 250px;
-    right: -150px;
-       
-  }
-
- 
-
-  body{
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      
-
-  }
-
-  .presentation p{
-    color:blue;
-    font-size: 100%;
-
-  }
-
+.carousel-caption h4 {
+  margin: auto;
+  width: 100%;
+  text-align: center;
+  background-color:white;
+  opacity: 0.7;
+  color:black;
   
+}
+
+.carousel-caption p {
+  position: absolute;
+  bottom: 250px;
+  right: -150px;
+}
+
+body {
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.presentation p {
+  color: black;
+  font-size: 120%;
+  text-align: justify;
+  
+}
+
+.phrase{
+
+  font-style: oblique;
+  
+  text-align: center;
+  font-size: 140%;
+}
